gap fix

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -825,7 +825,7 @@ summary:hover {
 }
 
 .oke-product-details-title {
-    margin-bottom: var(--gap-2xs);
+    margin-bottom: var(--gap-xs);
 }
 
 /*
